autenticação OK, contexto OK

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -8,7 +8,7 @@
     <%= f.text_field :name %>
   </p>
   <p>
-    <%= f.label :pasword %><br />
+    <%= f.label :password %><br />
     <%= f.text_field :pasword %>
   </p>
   <p>
