--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,7 +8,7 @@
 <% for user in @users %>
   <tr>
     <td><%=h user.name %></td>
-    <td><%=h user.pasword %></td>
+    <td><%=h user.password %></td>
     <td><%=h user.email %></td>
     <td><%= link_to 'Show', user %></td>
     <td><%= link_to 'Edit', edit_user_path(user) %></td>
