--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
     <ul>
       <li><a href="<%= root_path %>">Home</a></li>
       <li><a href="<%= new_issue_path %>">Nova Ligação</a></li>
-      <li><a href="<%= root_path %>">Solucionar Problema</a></li>
+      <li><a href="<%= new_solution_path %>">Solucionar Problema</a></li>
     </ul>
   </div>
   <div id="content">
